--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "cSpell.ignoreWords": [
-        "Pokecard"
+        "Butterfree",
+        "Charmander",
+        "Eevee",
+        "Gengar",
+        "Jigglypuff",
+        "Metapod",
+        "Pikachu",
+        "Pokecard",
+        "Pokecards",
+        "Pokedex",
+        "Squirtle"
     ]
 }
